hphp/hack/test/typecheck/this_param.php.exp
File "this_param.php", line 23, characters 16-19:
Invalid argument (Typing[4110])
File "this_param.php", line 23, characters 5-9:
  where '<static>' is a reference to this expression
File "this_param.php", line 17, characters 23-26:
This is the expression dependent type <static>
  that is compatible with the type 'this'
  that is compatible with an object of type Foo
File "this_param.php", line 21, characters 24-26:
It is incompatible with an object of type Foo
